# hangar-evals

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: paraboloid_claude.json  paraboloid_claude_http.json  paraboloid_claude_sandbox.json  paraboloid_opencode_sandbox.json  paraboloid_qwen36.json
containers/: anchor.Dockerfile  opencode.Dockerfile
examples/: lane_c_eval.yaml  lane_c_eval_sandboxed.yaml
notes/: llm-eval-plan.md
src/hangar/evals/: __init__.py  aggregate.py  cases.py  environment.py  hangar_ref.py  have_bridge.py  omd_service.py  oracle.py  run.py  scoring.py  trace.py  validity.py
src/hangar/evals/drivers/: __init__.py  base.py  claude_cli.py  claude_sdk.py  opencode.py  proc.py  sandbox.py
tests/: conftest.py  test_aggregate.py  test_cases.py  test_claude_cli.py  test_claude_sdk.py  test_drivers.py  test_environment.py  test_hangar_ref.py  test_have_bridge.py  test_omd_service.py  test_opencode_driver.py  test_oracle.py  test_proc.py  test_run.py  test_sandbox.py  test_scoring.py  test_trace.py  test_validity.py
tests/fixtures/: paraboloid_anchor_passed.db
