[project]
name = "hangar-evals"
version = "0.1.0"
description = "Offline benchmark: local LLMs x agentic coding harnesses vs Hangar MCP/CLI tools"
requires-python = ">=3.11"
# No runtime deps yet. They are added by the step that first uses them:
#   - claude-agent-sdk   (step 3, Claude anchor driver)
#   - opencode/ollama    (step 4, local-model driver)
# This keeps the skeleton trivially installable and reviewable.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PEP 420 namespace: ship src/hangar (NO src/hangar/__init__.py) so hangar.evals
# composes with the-hangar's hangar.* packages. Same rule as every hangar package.
[tool.hatch.build.targets.wheel]
packages = ["src/hangar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
