[project]
name = "hangar-evals"
version = "0.1.0"
description = "Offline benchmark: local LLMs x agentic coding harnesses vs Hangar MCP/CLI tools"
requires-python = ">=3.11"
# No required runtime deps. Optional arms add their own (see below):
#   - claude-agent-sdk   (step 3, Claude anchor driver -> [anchor] extra)
#   - opencode/ollama    (step 4, local-model driver)
# Keeping the base trivially installable lets each arm stay opt-in.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Anchor arm: the frontier Claude driver. Optional so the base package and the
# local-model arms stay installable without it. Also requires the Claude Code CLI.
anchor = ["claude-agent-sdk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PEP 420 namespace: ship src/hangar (NO src/hangar/__init__.py) so hangar.evals
# composes with the-hangar's hangar.* packages. Same rule as every hangar package.
[tool.hatch.build.targets.wheel]
packages = ["src/hangar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
